js/js.translator/testData/incremental/invalidation/defaultArgWrapperRemoved/lib1/l1.1.kt
fun foo(x: Int): Int = x + 3
